<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_authorization">

    <ImageView
        android:id="@+id/iv_icon_email"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="@+id/et_email"
        app:layout_constraintRight_toLeftOf="@+id/et_email"
        app:layout_constraintTop_toTopOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.666" />

    <ImageView
        android:id="@+id/iv_icon_password"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintRight_toLeftOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/et_email"
        style="@style/AuthorizationTheme.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="100dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/et_password"
        style="@style/AuthorizationTheme.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="100dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="5dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/sign_in"
        android:theme="@style/AuthorizationTheme.Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sign_up_title"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />



    <TextView
        fontPath="fonts/roboto.light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have account?"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintRight_toLeftOf="@+id/tv_register"
        android:id="@+id/tv_sign_up_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="31dp" />

    <TextView
        android:id="@+id/tv_register"
        fontPath="fonts/roboto.medium.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_sign_up_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/tv_forgot_password"
        fontPath="fonts/roboto.medium.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/authorization_logo_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />


</android.support.constraint.ConstraintLayout>